testdata/golden/sema/valid/compare_arm_ret_block_result.fmt
fn main(flag: bool) -> int {
    let x = compare flag {
        true => { ret 1; }
        false => { ret 2; }
    };
    return x;
}
