testdata/golden/sema/invalid/ownership/borrow_mutation_under_shared.fmt
// Cannot mutate while shared borrow is active.

fn main() {
    let mut x: int = 1;
    let r: &int = &x;
    x = 2;
}
